# BitBoardCheckers

./: CMakeLists.txt  README.md
src/: main.cpp
src/exceptions/: InvalidMoveException.cpp  InvalidMoveException.h
src/game/: Board.cpp  Board.h  CheckersGame.cpp  CheckersGame.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Player.cpp  Player.h
src/tests/: TestCheckersGame.cpp
src/utils/: BitManipulationUtility.cpp  BitManipulationUtility.h
